[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-voice-translator"
version = "1.0.0"
description = "Voice-to-voice translation pipeline utilizing Whisper transcription and text-to-speech generators."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
